<resources>
    <string name="app_name">Сервисы ГИБДД</string>
    <string name="choose_service">Выберите сервис</string>
    <string name="btn_check">Проверить</string>
    <string name="check_driver">Проверка водителя</string>
    <string name="check_auto">Проверка автомобиля</string>
    <string name="check_fine">Проверка штрафов</string>
    <string name="check_question">Прием обращений</string>
    <string name="btn_next">Далее</string>
    <string name="btn_send">Отправить</string>
    <string name="capture_picture_btn">Проверить</string>
    <string name="image_preview">image preview</string>
    <string name="camera_detection">Распознование</string>
    <string name="btn_back">BACK</string>
    <string name="label_result">результат</string>
    <string name="label_color">цвет</string>
    <string name="label_engine_number">номер двигателя</string>
    <string name="label_engine_volume">объем двигателя</string>
    <string name="label_body_number">номер</string>
    <string name="label_year">год</string>
    <string name="label_vin">vin</string>
    <string name="label_model">модель</string>
    <string name="label_category">категория</string>
    <string name="label_type">тип</string>
    <string name="label_power_kwt">Мощность кВт</string>
    <string name="label_power_hp">Мощность л.с.</string>

    <string-array name="check_type">
        <item>Истории регистрации</item>
        <item>Нахождения в розыске</item>
        <item>Наличия ограничений</item>
        <item>Участие в дорожно-транспортных происшествиях</item>
    </string-array>

    <!-- BANNER START -->
    <string name="banner_main">ca-app-pub-7157276789419592/9556197466</string>

    <string name="banner_history">ca-app-pub-7157276789419592/8345855863</string>
    <string name="banner_wanted">ca-app-pub-7157276789419592/9822589069</string>
    <string name="banner_restrict">ca-app-pub-7157276789419592/2299322263</string>
    <string name="banner_dtp">ca-app-pub-7157276789419592/3776055462</string>

    <!--TODO RESULT AND NEW PAGE-->
    <string name="banner_fine">TODO</string>
    <string name="banner_questions">TODO</string>
    <!-- BANNER END -->

    <string name="history">Истории регистрации</string>
    <string name="wanted">Нахождения в розыске</string>
    <string name="restrict">Наличия ограничений</string>
    <string name="dtp">Участие в ДТП</string>
    <string name="label_captcha">Введите символы с картинки</string>
    <string name="title_dtp">Проверка на участие в дорожно-транспортных происшествиях</string>
    <string name="title_accident_info">Информация о происшествии №</string>
    <string name="check_history_registration">Проверка истории регистрации в ГИБДД</string>
    <string name="content_descr_captcha_image">captcha image</string>
    <string name="not_internet_msg">Нет соединения к Интернету. Следующая попытка подключения будет через N сек</string>
    <string name="DateOfIssue">Дата выдачи</string>
    <string name="calendar">calendar</string>
    <string name="series_license_label">Серия водительского удостоверения</string>
    <string name="series_license_hint">77AA</string>
    <string name="number_license_label">Номер водительского удостоверения</string>
    <string name="number_license_hint">000000</string>
    <string name="date_of_issue_edit_value">27.11.2016</string>
    <string name="internet_not_available">Интернет не доступен</string>
</resources>
