<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/body_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/series_license_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/series_license_label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/series_license_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/series_license_hint"
                android:maxLength="4"
                android:maxLines="1" />

            <TextView
                android:id="@+id/number_license_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_license_label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/number_license_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_license_hint"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1" />

            <TextView
                android:id="@+id/DateOfIssueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateOfIssue"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/DateOfIssueLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date_of_issue_edit_text"
                    android:text="@string/date_of_issue_edit_value"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="date"
                    android:maxLength="10"
                    android:maxLines="1"/>

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:contentDescription="@string/calendar" />
            </LinearLayout>

            <TextView
                android:id="@+id/CuptureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_captcha"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/captcha_image_view"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_descr_captcha_image" />

            <EditText
                android:id="@+id/captcha_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1" />

            <Button
                android:id="@+id/check_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/check_btn_shadow"
                android:text="@string/btn_check"
                android:textColor="@drawable/text_button" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
