<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/car_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_main"></com.google.android.gms.ads.AdView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:scrollIndicators="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vin_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="Идентификационный номер (VIN)"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/vin_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="17" />

            <TextView
                android:id="@+id/captcha_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:text="@string/label_captcha"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/captcha_image_view"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/captcha_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1" />


            <Button
                android:id="@+id/check_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/check_btn_shadow"
                android:text="@string/btn_check"
                android:textColor="@drawable/text_button"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"></View>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>